# cloud-system

./: .gitignore  Cargo.toml  Readme.md  config.toml
adapter-api/: Cargo.toml
adapters/docker-adapter/: Cargo.toml
adapters/docker-adapter/src/: lib.rs
api/: Cargo.toml
api/adapter-api/: Cargo.toml
api/adapter-api/src/: lib.rs
api/plugin-api/src/: lib.rs
api/src/: context.rs  event.rs  lib.rs
api/src/adapter/: mod.rs
api/src/plugin/: mod.rs
core/: Cargo.toml
core/manager/: Cargo.toml
core/manager/src/: config.rs  main.rs  plugins.rs
plugin-api/: Cargo.toml
plugins/test-plugin/: Cargo.toml
plugins/test-plugin/src/: lib.rs
