[workspace]
members = ["core/manager", "plugins/test-plugin", "plugin-api", "core/node", "adapters/docker-adapter", "adapter-api"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
async-trait = "0.1.83"
futures = "0.3"

[workspace.dependencies.plugin_api]
path = "plugin-api"

[workspace.dependencies.tokio]
version = "1.41.1"
features = ["full"]
