[workspace]
members = [
    "core/manager",
    "plugins/test-plugin",
    "adapters/docker-adapter",
    "api",
]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
async-trait = "0.1.83"
futures = "0.3"
toml = "0.8.19"

[workspace.dependencies.api]
path = "api"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[workspace.dependencies.tokio]
version = "1.41.1"
features = ["full"]
